# ImageMorphing

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  affine2.py  affine3.py  auto_morph.py  collage.py  generate_app_summary_pdf.py  image_morpher.py  keypointmorph.py  morph.py  pyproject.toml  requirements-dev.txt  requirements.txt  resize.py
.github/workflows/: ci.yml  release.yml
experiments/: affine.py  image_morpher_copy.py  perf.py
gifs/: carousel - Copy.py  carousel.py  collage.py  collage_hover_with_static.html  gif_carousel.html
imagemorphing/: __init__.py  automatic.py  cli.py  config.py  exporters.py  image_ops.py  overlay_ui.py  pipeline.py  point_selection.py  ui.py
scripts/: dev.ps1  release.ps1
tests/: test_automatic.py  test_cli.py  test_config.py  test_pipeline.py  test_point_selection.py
